--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,15 +37,15 @@ allprojects {
 }
 
 dependencies {
-    def nav_version = "2.2.2"
+    def nav_version = "2.3.0"
     def room_version = "2.2.5"
     def lifecycle_version = "2.2.0"
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     //Google
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.0'
     implementation 'com.google.android.material:material:1.2.0-beta01'
-    implementation 'com.google.android.gms:play-services-auth:18.0.0'
+    implementation 'com.google.android.gms:play-services-auth:18.1.0'
     // Lifecycle
     implementation "androidx.lifecycle:lifecycle-viewmodel:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-livedata:$lifecycle_version"
@@ -61,8 +61,8 @@ dependencies {
     //implementation "androidx.navigation:navigation-dynamic-features-fragment:$nav_version"
     //androidTestImplementation "androidx.navigation:navigation-testing:$nav_version"
     //Firebase
-    implementation 'com.google.firebase:firebase-analytics:17.4.3'
-    implementation 'com.google.firebase:firebase-crashlytics:17.0.1'
+    implementation 'com.google.firebase:firebase-analytics:17.5.0'
+    implementation 'com.google.firebase:firebase-crashlytics:17.2.1'
     //WaveView
     implementation 'com.gelitenight.waveview:waveview:1.0.0'
     //JodaTime
@@ -73,11 +73,14 @@ dependencies {
     implementation 'com.github.ybq:Android-SpinKit:1.4.0'
     //TopSheet
     implementation 'com.github.Raffaa:AndroidTopSheet:0.52'
+    //MPAndroidChart
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
     //Test
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-    implementation "androidx.core:core-ktx:1.3.0"
+    //KTX
+    implementation "androidx.core:core-ktx:1.3.1"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
